# ChessEngine-CE-

./: .gitignore  AGENTS.md  Gemini.md  Makefile  README.md
.github/workflows/: ci.yml
data/: pgn_to_binpack.py  prepare_binpack.py  prepare_lichess_mixed.py  prepare_lichess_quiet.py  requirements.txt  sample_quiet.txt
docs/: ENGINE.md
engine/: CMakeLists.txt
engine/include/: bitboard.hpp  board.hpp  eval_classic.hpp  movegen.hpp  nnue.hpp  search.hpp  see.hpp  tt.hpp  types.hpp  uci.hpp  zobrist.hpp
engine/src/: bitboard.cpp  board.cpp  eval_classic.cpp  main.cpp  movegen.cpp  nnue.cpp  nnue_neon.cpp  search.cpp  see.cpp  tt.cpp  uci.cpp  zobrist.cpp
runpod/: Dockerfile  continuous_loop.sh  live_dashboard.sh  live_follow.sh  live_selfplay_eta.sh  monitor_100s_forever.sh  monitor_4h_100s.sh  resume_30h.sh  train_30h.sh  train_4h_selfplay.sh  watchdog_train_100s.sh
scripts/: bench_strength.sh  build.sh  cutechess_match.sh  quickbench.sh  smoke.sh  sprt.sh  verify.sh
trainer/: train_nnue.py
